[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Items/ItemBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Items/Gun.gd" type="Script" id=3]

[node name="Gun" instance=ExtResource( 1 )]
script = ExtResource( 3 )
item_name = "Gun"
item_tooltip = "I shouldn't be spawned."

[node name="FireFrom" type="Position2D" parent="." index="0"]

[node name="Noise" type="Area2D" parent="." index="1"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="ReloadTime" type="Timer" parent="." index="2"]
one_shot = true

[node name="UnjamTime" type="Timer" parent="." index="3"]
one_shot = true

[node name="JamReset" type="Timer" parent="." index="4"]
one_shot = true

[node name="Shoot" type="AudioStreamPlayer" parent="." index="5"]
bus = "SFX"

[node name="Empty" type="AudioStreamPlayer" parent="." index="6"]
bus = "SFX"

[node name="Jammed" type="AudioStreamPlayer" parent="." index="7"]
bus = "SFX"
__meta__ = {
"_editor_description_": "should use same sound as Empty"
}

[node name="Reload" type="AudioStreamPlayer" parent="." index="8"]
bus = "SFX"

[node name="Unjam" type="AudioStreamPlayer" parent="." index="9"]
bus = "SFX"
__meta__ = {
"_editor_description_": "should use same sound as reload"
}

[connection signal="timeout" from="ReloadTime" to="." method="_on_ReloadTime_timeout"]
[connection signal="timeout" from="UnjamTime" to="." method="_on_UnjamTime_timeout"]
[connection signal="timeout" from="JamReset" to="." method="_on_JamReset_timeout"]
